<resources>
  <string name="app_name">Raccoon</string>
  <string name="app_store_url">https://play.google.com/store/apps/details?id=wacode.yamada.yuki.nempaymentapp</string>
  <string name="com_ok">OK</string>
  <string name="com_yes">YES</string>
  <string name="com_no">NO</string>
  <string name="com_cancel">CANCEL</string>
  <string name="com_nem">nem</string>
  <string name="com_xem_uppercase">XEM</string>
  <string name="com_nem_uppercase">NEM</string>
  <string name="com_jpy_uppercase">JPY</string>
  <string name="com_jp_yen">YEN</string>
  <string name="com_copied">Copied to the clipboard</string>
  <string name="com_paste_error">Failed to paste</string>
  <string name="com_message">Message</string>
  <string name="com_mosaic">Mosaic</string>
  <string name="com_prefix_plus">+</string>
  <string name="com_prefix_minus">-</string>
  <string name="com_enter">Complete</string>
  <string name="com_home_uppercase">HOME</string>
  <string name="com_node">Node</string>
  <string name="com_authenticate">Authentication</string>
  <string name="com_success">Success</string>
  <string name="com_failed">Failed</string>
  <string name="com_coming_soon">Coming Soon!</string>
  <string name="com_name">Name</string>
  <string name="com_name_ruby">Name</string>
  <string name="com_phone_number">Phone</string>
  <string name="com_mail_address">Email</string>
  <string name="com_add">Add</string>
  <string name="com_save">Save</string>
  <string name="com_currency">Currency</string>
  <string name="com_edit">Edit</string>
  <string name="com_select">Select</string>
  <string name="com_complete">Complete</string>
  <string name="com_delete">Remove</string>
  <string name="com_network_error">ネットワークエラー</string>
  <string name="menu_search">Search</string>
  <string name="splash_title">Splash Screen</string>
  <string name="splash_node_select_error">Node : Alice2 is selected</string>
  <string name="main_toolbar">Hello NEMber</string>
  <string name="main_navigation_menu">MENU</string>
  <string name="main_navigation_home">HOME</string>
  <string name="main_navigation_address_book">Address Book</string>
  <string name="main_navigation_qr_labo">QR Labo</string>
  <string name="main_navigation_scan">Scan</string>
  <string name="main_navigation_mosaic_gallery">Mosaic Gallery</string>
  <string name="main_navigation_donate">Donation</string>
  <string name="main_navigation_faucet">Faucet</string>
  <string name="main_navigation_about">About</string>
  <string name="main_navigation_help">Help</string>
  <string name="main_navigation_setting">Settings</string>
  <string name="main_bottom_navigation_receive">RECEIVE</string>
  <string name="main_bottom_navigation_home"></string>
  <string name="main_bottom_navigation_send">SEND</string>
  <string name="main_bottom_navigation_qr_labo">QR Lab</string>
  <string name="main_bottom_navigation_scan">SCAN</string>
  <string name="main_navigation_null">Wallet is not selected</string>
  <string name="first_tutorial_button">Let\'s get started.</string>
  <string name="first_tutorial_title">Hello,NEM. Hello,UX.</string>
  <string name="first_tutorial_message1">Hi, I am glad to see you! \n Let us begin New Economy Movement by Blockchain
        together!
    </string>
  <string name="first_tutorial_message2">New Economy platform based on cryptocurrency and new ideas encourages you to
        have amazing experiences.
    </string>
  <string name="first_tutorial_message3">New Economy Movement for liberty and co-creation is already here.</string>
  <string name="fragment_qr_lab_dentaku">Request payment</string>
  <string name="fragment_qr_lab_sell_list">Use Selling Item list</string>
  <string name="fragment_qr_lab_register">QR Register</string>
  <string name="fragment_qr_lab_register_description">Create QR invoice with total amount by scanning a code.</string>
  <string name="home_fragment_balance">残高</string>
  <string name="home_fragment_send_receive_history">送受信</string>
  <string name="home_fragment_harvest">ハーベスト</string>
  <string name="home_fragment_jpy_before">JPY : %s</string>
  <string name="home_fragment_error_account">Failed to retrieve account</string>
  <string name="home_fragment_error_transaction">Failed to retrieve transactions</string>
  <string name="home_fragment_empty_transaction">No transactions yet.</string>
  <string name="home_fragment_empty_harvest">No harvesting income yet.</string>
  <string name="home_fragment_not_select_wallet">No wallet is selected</string>
  <string name="activity_send_mosaic_hint">Enter message</string>
  <string name="activity_send_mosaic_prefix">%d / 1024</string>
  <string name="activity_mosaic_list_title">Mosaic Gallery</string>
  <string name="activity_mosaic_empty_title">No mosaics</string>
  <string name="activity_mosaic_empty_description">Currently, there is no mosaic to show here.</string>
  <string name="pin_code_fragment_enter">Enter your PIN</string>
  <string name="pin_code_fragment_confirm">Confirm your PIN</string>
  <string name="pin_code_setting_success">Setup completed</string>
  <string name="pin_code_setting_confirm_error">Incorrect PIN code. \nPlease try again.</string>
  <string name="calculator_title">Amount</string>
  <string name="calculator_digit_0">0</string>
  <string name="calculator_digit_1">1</string>
  <string name="calculator_digit_2">2</string>
  <string name="calculator_digit_3">3</string>
  <string name="calculator_digit_4">4</string>
  <string name="calculator_digit_5">5</string>
  <string name="calculator_digit_6">6</string>
  <string name="calculator_digit_7">7</string>
  <string name="calculator_digit_8">8</string>
  <string name="calculator_digit_9">9</string>
  <string name="calculator_dot_sign">.</string>
  <string name="calculator_plus_sign">+</string>
  <string name="calculator_minus_sign">-</string>
  <string name="calculator_multiplication_sign">×</string>
  <string name="calculator_division_sign">÷</string>
  <string name="calculator_equals_sign">=</string>
  <string name="calculator_backspace">⌫</string>
  <string name="calculator_ce">CE</string>
  <string name="calculator_max">MAX</string>
  <string name="calculator_right_arrow">→</string>
  <string name="calculator_error">Error</string>
  <string name="calculator_amount">Amount</string>
  <string name="calculator_send_user">Recipient</string>
  <string name="nem_converter_error_price">Failed to retrieve</string>
  <string name="receive_fragment_address">Your Address</string>
  <string name="receive_fragment_address_toast">Address copied</string>
  <string name="select_wallet_activity_create_new_wallet">Create new wallet</string>
  <string name="select_wallet_empty_title">There is no wallet.</string>
  <string name="select_wallet_empty_message">The list of wallet(s) will be shown here when creating a new wallet by
        tapping above \n or linking your existing wallet account.
    </string>
  <string name="transaction_list_activity_title">Transactions</string>
  <string name="transaction_list_activity_empty_title">Oops! No transaction yet.</string>
  <string name="transaction_list_activity_empty_message">All transactions will be shown here.</string>
  <string name="transaction_detail_title">Transaction detail</string>
  <string name="transaction_detail_first_amount">%1$s XEM</string>
  <string name="transaction_detail_second_amount">Amount : %1$s XEM</string>
  <string name="transaction_detail_second_non_amount">Amount : Trading volume unknown</string>
  <string name="transaction_detail_fee">Fee : %1$s XEM</string>
  <string name="transaction_detail_block">Block : %1$d</string>
  <string name="transaction_detail_hash">Hash :</string>
  <string name="transaction_detail_non_message">no message</string>
  <string name="transaction_detail_mosaic_count">Mosaic : %1$d type</string>
  <string name="transaction_detail_mosaic_name">Name : %1$s</string>
  <string name="transaction_detail_mosaic_amount">Amount : %1$s</string>
  <string name="transaction_detail_non_amount">Transaction volume unknown</string>
  <string name="transaction_detail_non_address">Unknown address</string>
  <string name="transaction_detail_encrypt_message">Message is encrypted</string>
  <string name="transaction_detail_decrypt_error_message">Failed to unlock</string>
  <string name="transaction_detail_pin_code_title">Authenticate to open message</string>
  <string name="send_top_fragment_send">Destination</string>
  <string name="send_top_fragment_hint">Enter destination address</string>
  <string name="send_top_fragment_address_error">Invalid address</string>
  <string name="send_top_fragment_confirm_title">Hey, Watch out!</string>
  <string name="send_top_fragment_confirm_message">You are about to send some crypto to the newbie address that has
        never run on Blockchain before. That said, please be assured that it is still legit address and therefore you
        can transfer cryptocurrency. In the next time, please check whether the \n address is correct or not, as much as
        you need to double check whether the recipient is reliable or not.
    </string>
  <string name="send_top_fragment_amount_confirm_title">Hey, it is 0XEM. Are you sure?</string>
  <string name="send_top_fragment_amount_confirm_message">Are you sure you want to send 0 XEM?</string>
  <string name="send_top_fragment_amount_confirm_dialog_positive">Yes</string>
  <string name="send_top_fragment_amount_confirm_dialog_negative">No</string>
  <string name="send_top_fragment_message_confirm_title">Nothing else written in Message</string>
  <string name="send_top_fragment_message_confirm_message">You left message in blank. \n Are you sure you want to
        continue?
    </string>
  <string name="send_top_fragment_message_confirm_dialog_positive">Yes</string>
  <string name="send_top_fragment_message_confirm_dialog_negative">Attach</string>
  <string name="select_send_mode_fragment_title">Select transfer mode</string>
  <string name="select_send_mode_fragment_sub_title">Do you want to send with a message?</string>
  <string name="select_send_mode_fragment_standard_title">STANDARD SEND</string>
  <string name="select_send_mode_fragment_standard_hint">Send without a message.</string>
  <string name="select_send_mode_fragment_standard_message">Send in a standard way</string>
  <string name="select_send_mode_fragment_message_title">Message SEND</string>
  <string name="select_send_mode_fragment_message_hint">Cannot exceed 1024 characters. Used as authentication number
        when you deposit in crypto exchanges.
    </string>
  <string name="select_send_mode_fragment_message_message">Attach message in transaction</string>
  <string name="select_message_type_fragment_title">Encrypt the message</string>
  <string name="select_message_type_fragment_normal_message_title">Plain Message</string>
  <string name="select_message_type_fragment_normal_message_description">Plain message. \n Be sure to input
        authentication code here when you depositing in crypto exchanges.
    </string>
  <string name="select_message_type_fragment_crypt_message_title">Encrypted message</string>
  <string name="select_message_type_fragment_crypt_message_description">Let\'s secure your privacy with military grade
        encryption.
    </string>
  <string name="enter_send_fragment_title">Enter amount</string>
  <string name="enter_send_fragment_tab1">Remit processing</string>
  <string name="enter_send_fragment_tab2">Attach Mosaic</string>
  <string name="enter_send_fragment_mosaic_only">Send with XEM</string>
  <string name="message_attachment_confirm_main_text">メッセージを添付しますか？</string>
  <string name="message_type_select_fragment_main_text">メッセージのタイプを選択</string>
  <string name="message_type_select_fragment_message_plane">通常のメッセージです。\n取引所への認証番号を入力する際は、必ずこちらで行いましょう。</string>
  <string name="message_type_select_fragment_message_plane_icon_text">通常</string>
  <string name="message_type_select_fragment_message_crypt_icon_text">暗号化</string>
</resources>