<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <TextView
      android:id="@+id/titleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:gravity="center"
      android:text="@string/message_attachment_confirm_main_text"
      android:textColor="@color/textBlack"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="216dp"
      android:layout_marginTop="40dp"
      android:contentDescription="@null"
      android:src="@mipmap/image_www_human"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleTextView"
      />


  <wallet.raccoon.raccoonwallet.view.common.RaccoonSingleMaterialButton
      android:id="@+id/yesButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|center"
      android:visibility="visible"
      app:layout_constraintBottom_toTopOf="@id/noButton"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:text="@string/com_yes"
      />

  <wallet.raccoon.raccoonwallet.view.common.RaccoonSingleMaterialButton
      android:id="@+id/noButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|center"
      android:layout_marginBottom="24dp"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:text="@string/com_no"
      />

</androidx.constraintlayout.widget.ConstraintLayout>