<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <TextView
      android:id="@+id/titleTextView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:gravity="center"
      android:text="@string/message_type_select_fragment_main_text"
      android:textColor="@color/textBlack"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="144dp"
      android:layout_height="96dp"
      android:layout_marginTop="40dp"
      android:contentDescription="@null"
      android:src="@drawable/image_message_female"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titleTextView"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:id="@+id/descriptionTextView"
      android:gravity="center"
      android:paddingEnd="32dp"
      android:paddingStart="32dp"
      android:text="@string/message_type_select_fragment_message_plane"
      android:textColor="@color/textBlack"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/imageView"
      />

  <LinearLayout
      android:id="@+id/mailLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:layout_marginEnd="80dp"
      android:orientation="vertical"
      android:foreground="?selectableItemBackground"
      app:layout_constraintBottom_toTopOf="@id/yesButton"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/cryptLayout"
      >

    <ImageView
        android:id="@+id/mailImageView"
        android:layout_width="20dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_mail_black"
        />

    <TextView
        android:id="@+id/mailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_type_select_fragment_message_plane_icon_text"
        android:textColor="@color/textBlack"
        android:textSize="16sp"
        />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/cryptLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:orientation="vertical"
      android:foreground="?selectableItemBackground"
      app:layout_constraintBottom_toTopOf="@id/yesButton"
      app:layout_constraintLeft_toRightOf="@id/mailLayout"
      app:layout_constraintRight_toRightOf="parent"
      >

    <ImageView
        android:id="@+id/cryptImageView"
        android:layout_width="20dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:src="@drawable/ic_lock_gray"
        />

    <TextView
        android:id="@+id/cryptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_type_select_fragment_message_crypt_icon_text"
        android:textColor="@color/textGray"
        android:textSize="16sp"
        />
  </LinearLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/yesButton"
      android:layout_width="192dp"
      android:layout_height="45dp"
      android:layout_marginBottom="24dp"
      android:layout_marginEnd="@dimen/space_small"
      android:layout_marginLeft="@dimen/space_small"
      android:layout_marginRight="@dimen/space_small"
      android:layout_marginStart="@dimen/space_small"
      android:layout_marginTop="31dp"
      android:backgroundTint="@color/nemGreen"
      android:elevation="3dp"
      android:text="@string/com_yes"
      android:textColor="@android:color/white"
      app:cornerRadius="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
